plugins {
    id 'java'
}

allprojects {
    group = 'org.reujdon.jtp'
    version = '0.2.0'

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    dependencies {
        implementation 'org.slf4j:slf4j-api:2.0.17'
        implementation 'ch.qos.logback:logback-classic:1.4.7'
        implementation 'com.google.code.gson:gson:2.8.8'

        // Test dependencies
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'
    }

    test {
        useJUnitPlatform()
    }
}

tasks.register('allJavadoc', Javadoc) {
    source subprojects.collect { it.sourceSets.main.allJava }
    classpath = files(subprojects.collect { it.configurations.compileClasspath })
    destinationDir = file("${projectDir}/javadoc")
    title = "${project.name} Javadoc"
}

tasks.named("build") {
    dependsOn("allJavadoc")
}